2007-11-03  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: need to append a "/" to TemplateSourceDirectory
	before calling VirtualPathUtility.Combine, in order to get the
	correct physical path to the requested file. Combine looks for the
	last occurrence of "/" to determine where the relative paths
	should be joined.

	* MinimizableAttributeTypeConverter.cs: don't throw on null value,
	call the base class method in that case.

	* SimpleWebHandlerParser.cs: don't NRE on a null assembly passed
	to AddAssembly.
	AddAssemblyByName must check the return value of
	Assembly.LoadWithPartialName, as the method doesn't throw on
	missing assembly, it returns null instead.

	* ClientScriptManager.cs: eventValidationArray is serialized in an
	optimized fashion, so that its serialized form occupies only as
	many slots as were actually used. It may result in that an array
	of 0 entries will be serialized and then
	restored. EnsureEventValidationArray takes that into consideration
	now.

2007-11-01  Marek Habersack  <mhabersack@novell.com>

	* Page.cs, ObjectStateFormatter.cs: use the new
	MachineKeySectionUtils class wherever necessary.

2007-10-29  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: add the file pointed to by the Src or
	CodeFile attributes to the list of page cache dependencies.

	* PageParser.cs, UserControlParser.cs: Add the MasterPage file to
	the list of page cache dependencies.

	* MasterPageParser.cs: add the source pointed to by VirtualPath to
	the list of cache dependencies.

2007-10-23  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: added two constants to define start/end
	script block comments rendering. 1.1 uses HTML comments, while 2.0
	uses a CDATA block.

	* Page.cs: render script blocks with start/end comments taken from
	the ClientScriptManager constants above.

2007-10-17  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: removed code that ignored the Async and
	AsyncTimeout attributes.